--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -447,7 +447,7 @@
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="#">
+                            <a href="wa.me/2347039404736">
                                 <i class="fas fa-envelope me-2"></i> Contact
                             </a>
                         </li>
