--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -518,7 +518,7 @@
                 <div class="card product-card h-100 border-0 shadow-sm">
                     <div class="card-img-wrapper position-relative overflow-hidden">
                         {% if product.image %}
-                            <img src="{{ product.image.url }}" 
+                            <img src="{{ product.image_url }}" 
                                  class="card-img-top" 
                                  alt="{{ product.name }}"
                                  style="height: 250px; object-fit: cover;">
