--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -57,7 +57,7 @@
             <div class="product-gallery">
                 <div class="main-image mb-3">
                     {% if product.image %}
-                        <img src="{{ product.image.url }}" 
+                        <img src="{{ product.image_url }}" 
                              class="img-fluid rounded shadow-sm main-product-image" 
                              alt="{{ product.name }}"
                              loading="lazy">
@@ -315,7 +315,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card product-card h-100">
                         {% if related_product.image %}
-                            <img src="{{ related_product.image.url }}" 
+                            <img src="{{ related_product.image_url }}" 
                                  class="card-img-top" 
                                  alt="{{ related_product.name }}"
                                  loading="lazy">
